added channel name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </form>
       </div>
   </div>
-  <p>hi</p>
+  <p>hi baby</p>
   <script src="script.js" type="module"></script>
   </body>
 </html>
